<resources>
    <string name="app_name">Task App</string>
    <string name="imgUrl">https://d2xkd1fof6iiv9.cloudfront.net/images/courses/%1$s/169_820.jpg
</string>
    <string name="owned">Owned</string>
    <string name="view_all">View All</string>
    <string name="recently_watched">Recently Watched</string>
    <string name="favourites">Favorites</string>
    <string name="wish_list">Wish List</string>

    <string name="search_hint">Search %1$s</string>
    <string name="only_show_owned">Only Show Owned: </string>
    <string name="skill">Skill: </string>
    <string name="curriculum">Curriculum: </string>
    <string name="style">Style: </string>
    <string name="educator">Educator: </string>
    <string name="series">Series: </string>
    <string name="no_search_results_found">No search results found</string>
    <string name="no">No</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="owned">Owned</string>
</resources>