<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        app:startIconDrawable="@drawable/ic_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxLines="1"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:scrollbars="none"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:layout_marginEnd="8dp"
                android:id="@+id/card_clear"
                android:visibility="gone"
                android:focusable="true"
                app:checkedIcon="@null"
                style="@style/Widget.MaterialComponents.CardView"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:id="@+id/layout_filterclear"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="17sp"
                        android:text="@string/clear_filters"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_close"
                        android:layout_gravity="center"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="2dp"
                        android:textSize="17sp"
                        android:id="@+id/filterclear"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:layout_marginEnd="8dp"
                android:id="@+id/card_onlyowned"
                android:focusable="true"
                app:checkedIcon="@null"
                style="@style/Widget.MaterialComponents.CardView"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:id="@+id/layout_filteronlyown"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="17sp"
                        android:text="@string/only_show_owned"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_arrowdown"
                        android:layout_gravity="center"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/no"
                        android:textSize="17sp"
                        android:id="@+id/filterOnlyown"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:layout_marginStart="8dp"
                android:id="@+id/card_skill"
                android:focusable="true"
                app:checkedIcon="@null"
                style="@style/Widget.MaterialComponents.CardView"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:id="@+id/layout_filterskill"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="17sp"
                        android:text="@string/skill"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_arrowdown"
                        android:layout_gravity="center"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="2dp"
                        android:textSize="17sp"
                        android:id="@+id/filterskill"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:layout_marginStart="8dp"
                android:id="@+id/card_curriculum"
                android:focusable="true"
                app:checkedIcon="@null"
                style="@style/Widget.MaterialComponents.CardView"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:id="@+id/layout_filtercurriculum"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="17sp"
                        android:text="@string/curriculum"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_arrowdown"
                        android:layout_gravity="center"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="2dp"
                        android:textSize="17sp"
                        android:id="@+id/filtercurriculum"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:layout_marginStart="8dp"
                android:id="@+id/card_style"
                android:focusable="true"
                app:checkedIcon="@null"
                style="@style/Widget.MaterialComponents.CardView"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:id="@+id/layout_filterstyle"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="17sp"
                        android:text="@string/style"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_arrowdown"
                        android:layout_gravity="center"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="2dp"
                        android:textSize="17sp"
                        android:id="@+id/filterstyle"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:layout_marginStart="8dp"
                android:id="@+id/card_educator"
                android:focusable="true"
                app:checkedIcon="@null"
                style="@style/Widget.MaterialComponents.CardView"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:id="@+id/layout_filtereducator"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="17sp"
                        android:text="@string/educator"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_arrowdown"
                        android:layout_gravity="center"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="2dp"
                        android:textSize="17sp"
                        android:id="@+id/filtereducator"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:layout_marginStart="8dp"
                android:id="@+id/card_series"
                android:focusable="true"
                app:checkedIcon="@null"
                style="@style/Widget.MaterialComponents.CardView"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:id="@+id/layout_filterseries"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="17sp"
                        android:text="@string/series"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_arrowdown"
                        android:layout_gravity="center"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="2dp"
                        android:textSize="17sp"
                        android:id="@+id/filterseries"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/rv_filteritems"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_search_results_found"
        android:layout_gravity="center"
        android:id="@+id/tv_noresult"
        android:visibility="gone"
        android:gravity="center"
        android:textSize="17sp"/>

</LinearLayout>